--- a/Tempus/main/templates/main/index.html
+++ b/Tempus/main/templates/main/index.html
@@ -1,16 +1,14 @@
 {% load static %}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tempus Watches</title>
-    <!-- styles \/ -->
     <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
-    <!-- bootstrap icons \/ -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- AOS animation \/ -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <!-- Swiper \/ -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css" />
 </head>
 <body>
@@ -21,7 +19,7 @@
         <i class="bi bi-arrow-left back-arrow" style="font-size: 20px; cursor: pointer;" id="backArrowSearch"></i>
         <h2 class="search-title">find what you've been looking for</h2>
         <div class="search-block">
-            <input type="text" placeholder="search..." class="search-input">
+            <input type="text" placeholder="Искать..." class="search-input">
             <i class="bi bi-search" style="font-size: 16px; color: #06520D;"></i>
         </div>
     </div>
@@ -29,29 +27,105 @@
     <div class="header-heart" id="headerHeart">
         <i class="bi bi-arrow-left back-arrow" style="font-size: 20px; cursor: pointer;" id="backArrowHeart"></i>
         <h2 class="heart-title">my choice</h2>
-        <p class="heart-text">Number of models in the "Favorites" section: 0 items.</p>
+        <p class="heart-text">В секции "Избранное" пока ничего нет.</p>
     </div>
 
     <div class="header-login" id="headerLogin">
         <i class="bi bi-arrow-left back-arrow" style="font-size: 20px; cursor: pointer;" id="backArrowLogin"></i>
-        <h2 class="login-title">My tempus</h2>
-        <p class="login-text">login</p>
+        <h2 class="login-title">my account</h2>
+        <p class="login-text">ВХОД</p>
         <form class="login-form">
             <div class="form-group">
-                <!-- <label for="email">E-mail</label> -->
-                <input type="email" class="login-input" placeholder="Email" required/>
+                <input type="email" class="login-input" placeholder="Почта" id="loginEmail" required/>
             </div>
-            <div class="form-group">
-                <!-- <label for="email">Password</label> -->
-                <input type="email" class="login-input" placeholder="Password" required/>
-                <a href="/" class="forget-password">forget the password?</a>
+            <div class="form-group password-group">
+                <input type="password" class="login-input password-input" placeholder="Пароль" id="loginPassword" required/>
+                <i class="bi bi-eye-slash password-toggle" data-targets="loginPassword"></i>
+                <a href="#" class="forget-password">Забыли пароль?</a>
             </div>
-            <!-- <div class="form-group">
-                <input type="email" class="login-input" placeholder="Repeat password" required/>
-            </div> -->
-            <button class="form-btn">login</button>
-            <a href="/" class="have-account">have an account?</a>
+            <button class="form-btn">ВОЙТИ</button>
+            <a href="#" class="have-account" id="goToRegister">У меня нет аккаунта</a>
         </form>
+    </div>
+
+    <div class="header-login" id="headerRegister">
+        <i class="bi bi-arrow-left back-arrow" style="font-size: 20px; cursor: pointer;" id="backArrowRegister"></i>
+        <h2 class="login-title">my account</h2>
+        <p class="login-text">РЕГИСТРАЦИЯ</p>
+        <form class="login-form">
+            <div class="form-group input-group-with-error">
+                <input type="text" class="login-input" placeholder="Имя" id="registerFirstName" required/>
+                <div class="error-message" id="firstNameError"></div>
+            </div>
+
+            <div class="form-group input-group-with-error">
+                <input type="text" class="login-input" placeholder="Фамилия" id="registerLastName" required/>
+                <div class="error-message" id="lastNameError"></div>
+            </div>
+
+            <div class="form-group input-group-with-error">
+                <input type="email" class="login-input" placeholder="Почта" id="registerEmail" required/>
+                <div class="error-message" id="emailError"></div>
+            </div>
+
+            <div class="form-group input-group-with-error">
+                <input type="text" class="login-input" placeholder="Номер телефона" id="registerPhone" required/>
+                <div class="error-message" id="phoneError"></div>
+            </div>
+
+            <div class="form-group password-group input-group-with-error">
+                <input type="password" class="login-input password-input" placeholder="Пароль" id="registerPassword" required minlength="8"/>
+                <i class="bi bi-eye-slash password-toggle" data-targets="registerPassword,repeatPassword"></i>
+
+                <div class="password-strength-bar">
+                    <div class="strength-indicator" id="passwordStrengthIndicator"></div>
+                </div>
+                <div class="error-message" id="passwordError"></div>
+            </div>
+
+            <div class="form-group input-group-with-error">
+                <input type="password" class="login-input password-input" placeholder="Повторите пароль" id="repeatPassword" required/>
+                <div class="error-message" id="repeatPasswordError"></div>
+            </div>
+
+            <button class="form-btn" id="registerSubmitBtn">ПРОДОЛЖИТЬ</button>
+        </form>
+    </div>
+
+    <div class="success-modal" id="successModal">
+        <div class="modal-content">
+            <i class="bi bi-x-lg close-modal-btn" id="closeSuccessModal"></i>
+            <h2 class="modal-title">Регистрация прошла успешно!</h2>
+            <p class="modal-text">Благодарим за регистрацию.</p>
+            <p class="modal-text">На вашу почту <strong><span id="registeredEmailDisplay"></span></strong> отправлена ссылка для подтверждения аккаунта.</p>
+            <p class="modal-text-small">Пожалуйста, проверьте свою почту, включая папку "Спам".</p>
+
+            <button class="form-btn close-btn" id="confirmSuccessModal">Понятно</button>
+
+            <div class="email-service-links">
+                <a href="https://mail.google.com/" target="_blank" class="service-icon gmail" aria-label="Открыть Gmail">
+                    <span class="tooltip-text">Перейти на Gmail</span>
+                </a>
+                <a href="https://mail.yahoo.com/" target="_blank" class="service-icon yahoo" aria-label="Открыть Yahoo Mail">
+                    <i class="fab fa-yahoo"></i>
+                    <span class="tooltip-text">Перейти на Yahoo!</span>
+                </a>
+                <a href="https://outlook.live.com/mail/" target="_blank" class="service-icon outlook" aria-label="Открыть Outlook">
+                    <i class="fas fa-envelope-square"></i>
+                    <span class="tooltip-text">Перейти на Outlook</span>
+                </a>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="toast-notification" id="toastNotification">
+        <div class="toast-content">
+            <i class="bi bi-check-circle-fill success-icon"></i>
+            <p class="toast-message">Вы успешно вошли в аккаунт!</p>
+            <i class="bi bi-x close-toast-btn" id="closeToastBtn"></i>
+        </div>
+        <div class="toast-progress-bar" id="toastProgressBar"></div>
     </div>
 
     <header class="header">
@@ -72,9 +146,12 @@
                     <h2 class="header-logo">tempus</h2>
                 </div>
                 <div class="right-header">
+                    <i class="ow_i ow_i--24 ow_i--lang" aria-hidden="true"></i>
                     <i class="bi bi-search" id="searchBtn" style="font-size: 18px;"></i>
                     <i class="bi bi-heart" id="heartBtn" style="font-size: 20px;"></i>
                     <i class="bi bi-person" id="loginBtn" style="font-size: 23px;"></i>
+
+                    <a href="{% url 'account' %}" class="bi bi-person-fill account-icon-hidden" id="accountBtn" style="font-size: 23px; text-decoration: none;"></a>
                 </div>
             </div>
 
@@ -95,10 +172,10 @@
 
     <main>
         <section class="new-collection container">
-            <h2 class="new-title">New Collection</h2>
+            <h2 class="new-title">NEW COLLECTION</h2>
             <p class="new-text">Tissot Ballade 39mm</p>
             <div class="new-collection-wrapper">
-                <img src="{% static 'main/img/new-collection.webp' %}" alt="" class="new-collection-img" data-aos="fade-right" data-aos-duration="1100">
+                <img src="{% static 'main/img/new-collection.png' %}" alt="" class="new-collection-img" data-aos="fade-right" data-aos-duration="1100">
                 <div class="new-collection-description" data-aos="fade-left" data-aos-duration="1100">
                     <h3>Tissot Ballade</h3>
                     <p>
@@ -109,41 +186,41 @@
             </div>
         </section>
         <section class="popular">
-            <h2 class="popular-title">The Most Popular Watches</h2>
+            <h2 class="popular-title">THE MOST POPULAR WATCHES</h2>
             <div class="popular-swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="{% static 'main/img/popular hublot.webp' %}" alt="">
+                        <img src="{% static 'main/img/popular hublot.png' %}" alt="">
                         <h2 class="slide-title">Patek Philippe</h2>
                         <p class="slide-price">$496,260</p>
                         <a href="/" class="slide-btn">more</a>
                     </div>
                     <div class="swiper-slide">
-                        <img src="{% static 'main/img/popular patek.webp' %}" alt="">
+                        <img src="{% static 'main/img/popular patek.png' %}" alt="">
                         <h2 class="slide-title">Patek Philippe</h2>
                         <p class="slide-price">$496,260</p>
                         <a href="/" class="slide-btn">more</a>
                     </div>
                     <div class="swiper-slide">
-                        <img src="{% static 'main/img/popular rolex.webp' %}" alt="">
+                        <img src="{% static 'main/img/popular rolex.png' %}" alt="">
                         <h2 class="slide-title">Patek Philippe</h2>
                         <p class="slide-price">$496,260</p>
                         <a href="/" class="slide-btn">more</a>
                     </div>
                     <div class="swiper-slide">
-                        <img src="{% static 'main/img/popular hublot.webp' %}" alt="">
+                        <img src="{% static 'main/img/popular hublot.png' %}" alt="">
                         <h2 class="slide-title">Patek Philippe</h2>
                         <p class="slide-price">$496,260</p>
                         <a href="/" class="slide-btn">more</a>
                     </div>
                     <div class="swiper-slide">
-                        <img src="{% static 'main/img/popular patek.webp' %}" alt="">
+                        <img src="{% static 'main/img/popular patek.png' %}" alt="">
                         <h2 class="slide-title">Patek Philippe</h2>
                         <p class="slide-price">$496,260</p>
                         <a href="/" class="slide-btn">more</a>
                     </div>
                     <div class="swiper-slide">
-                        <img src="{% static 'main/img/popular rolex.webp' %}" alt="">
+                        <img src="{% static 'main/img/popular rolex.png' %}" alt="">
                         <h2 class="slide-title">Patek Philippe</h2>
                         <p class="slide-price">$496,260</p>
                         <a href="/" class="slide-btn">more</a>
@@ -167,6 +244,32 @@
         </section>
     </main>
 
+    <footer class="footer">
+        <div class="container footer-wrapper">
+
+            <a class="footer-btn" href="https://github.com/shaizade/TempusWatches" target="_blank" rel="noopener noreferrer">Подробнее</a>
+
+            <div class="footer-info">
+                <div class="footer-flex">
+                    <p class="footer-link">HTML/CSS/JS:Надир</p>
+                    <p class="footer-link">Graphic Design: Ибрагим, Артем, Ильмурат</p>
+                    <p class="footer-link">Django: Алижан</p>
+                </div>
+                <p class="footer-logo">&#169; Tempus Watches</p>
+            </div>
+
+            <div class="language-switcher" id="languageSwitcher">
+                <button class="lang-toggle-btn" id="langToggleBtn" aria-expanded="false" aria-controls="langDropdown">
+                    <i class="bi bi-globe" style="font-size: 20px;"></i>
+                </button>
+                <div class="lang-dropdown" id="langDropdown">
+                    <a href="#" class="lang-item" data-lang="ru">Русский</a>
+                    <a href="#" class="lang-item" data-lang="en">English</a>
+                </div>
+            </div>
+            </div>
+    </footer>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
@@ -174,24 +277,11 @@
     // noinspection JSUnresolvedVariable
     AOS.init();
     </script>
-    <script src="{% static 'main/scripts/main.js' %}"></script>
 
-    <div class="footer-line">
-      <div class="footer-left">
-        <button class="about-project-btn">Подробнее о проекте</button>
-      </div>
+    <script>
+        const ACCOUNT_URL = "{% url 'account' %}";
+    </script>
 
-      <div class="footer-center">
-        <div class="footer-authors">
-          <div class="author-block">HTML/CSS/JS: Надир</div>
-          <div class="author-block">Graphic Design: Ибрагим, Артём, Ильмурат</div>
-          <div class="author-block">Django: Алижан</div>
-        </div>
-        <div class="footer-bottom">
-          <p>© 2025 Tempus Watches</p>
-        </div>
-      </div>
-    </div>
-
+    <script src="{% static 'main/js/main.js' %}"></script>
 </body>
 </html>
